# bicycle

./: .clang-format  .format_code.sh  .gitignore  CMakeLists.txt  README.md  conanfile.txt
allocator/: CMakeLists.txt
allocator/include/bicycle/allocator/: export.h  mmap_allocation.hpp
allocator/src/: mmap_allocation.cpp
allocator/tests/: CMakeLists.txt  mmap_allocator_tests.cpp
bicycle/: CMakeLists.txt
bicycle/core/: CMakeLists.txt
bicycle/core/include/bicycle/: contract.hpp  observer_ptr.hpp  result.hpp
bicycle/core/src/: contract.cpp
cmake/: BicycleConfig.cmake.in  CompilerWarnings.cmake  FindSphinx.cmake  Utils.cmake  bicycleConfig.cmake.in
conan/: conanfile.py
container/: CMakeLists.txt
container/include/bicycle/container/: intrusive_linked_list.hpp
container/src/: support.cpp
container/tests/: CMakeLists.txt  intrusive_linked_list_tests.cpp
context/: CMakeLists.txt
context/include/bicycle/context/: context.hpp  trampoline.hpp
context/src/: CMakeLists.txt  context.cpp
context/src/detail/: switch_machine_context.S  switch_machine_context.hpp
core/: CMakeLists.txt
core/include/bicycle/core/: contract.hpp  contracts.hpp  export.h  observer_ptr.hpp  result.hpp
core/src/: contract.cpp  contracts.cpp
core/tests/: CMakeLists.txt  observer_ptr_tests.cpp  result_tests.cpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py  core.rst  index.rst
docs/articles/: core.rst  error_model.rst  executors.rst
executors/: CMakeLists.txt
executors/include/bicycle/executors/: executor.hpp  export.h  inline_executor.hpp  manual_executor.hpp  strand.hpp  task.hpp  thread_pool.hpp
executors/include/bicycle/executors/detail/: mpmc_blocking_queue.hpp
executors/src/: inline_executor.cpp  manual_executor.cpp  strand.cpp  thread_pool.cpp
executors/tests/: CMakeLists.txt  manual_executor_tests.cpp  thread_pool_tests.cpp
future/: CMakeLists.txt
future/include/bicycle/: future-inl.hpp  future.hpp
future/src/: detail.cpp
test/core/: CMakeLists.txt  observer_ptr_test.cpp
